Plugin Name: PopUp Pro
Author: Barry (Incsub), Marko Miljus (Incsub), Philipp Stracker (Incsub)

Change Log:
----------------------------------------------------------------------

4.7.1.1
----------------------------------------------------------------------
- Fix compatibility issues caused by WordPress 4.3 changes
- Fix a PHP notice about invalid foreach value
- Remove debug output when saving a PopUp

4.7.1.0
----------------------------------------------------------------------
- Add new rules: Show on date, Hide on date
- Fix incompatibility with ACF Pro plugin
- Fix issue that made rules inaccessible (not clickable in editor)
- Fix several PHP warnings and notices

4.7.0.9
----------------------------------------------------------------------
- Fix bug with Display Animation field in PopUp editor
- Small code improvements to avoid PHP notices

4.7.0.8
----------------------------------------------------------------------
- Add integration for Membership2
- Fix issues with WPML integration

4.7.0.7
----------------------------------------------------------------------
- Add a link target option for CTA Button (use _blank to open CTA in new tab)
- Add JS hook 'popup-submit-process' to allow manual updating of popup contents after form submit
- Simplify PopUp template structure to encourage creation of custom templates
- Fix XSS vulnerability (add_query_arg/remove_query_arg)
- Fix several small issues with different rules

4.7.0.6
----------------------------------------------------------------------
- Fix typo in the XProfile condition

4.7.0.5
----------------------------------------------------------------------
- Add new "Protected Content" rule
- Fix bug with XProfile rule that did not save field-value correctly
- Fix behavior "Show on Click" when event is attached to a link/button

4.7.0.4
----------------------------------------------------------------------
- Fix variable-name collission with CoursePress

4.7.0.3